# food-recommender-system

./: .gitignore  Makefile  README.md  ester_molinari.json  generated_lunch.json  gluten_intolerant.json  lactose_intolerant.json  metrics.json  pyproject.toml  requirements.txt  user_profile.json
.devcontainer/: devcontainer.json
.github/workflows/: pytests.yaml
.streamlit/: config.toml
data/interim/: user_profile.json
data/processed/: all_default.json  another_user.json  default.json  delete_this.json  lactose_default.json  lactose_intolerance.json  lactose_intolerant.json  new_test.json  new_user.json  no_intolerances.json  old_user.json  test.json  test_user.json  user_2.json
data/raw/: fast-food-equiv.json  food-infos.json  food-pantry.json  food-seasonality.csv  food-seasonality.json  food-servings.json  nutritional-facts.csv  (+2 more)
docs/: food-recsys-api-docs.md  food-recsys-demo-docs.md  food-recsys-docs.md
food_recommender_system/: config.py  dataloader.py  docuquery.py  justificator.py  main.py  meal-gen.py  mealgen.py  mood-mod.py  moodmod.py  profiler.py  recommender.py  recsys.py
notebooks/: 1a-dataset-analysis.ipynb  1b-data-exploration.ipynb  1c-web-scraping.ipynb  1d-food-facts-and-seasonality.ipynb  2a-italian-pantry.ipynb  3a-preferences-and-intollerances.ipynb  4a-nutritional-facts.ipynb  6a-meal-structure.ipynb  data-exploration.ipynb  meal-generator.ipynb  project-idea.ipynb
tests/: config_test.py  dataloader_test.py  justificator_test.py  mealgen_test.py  moodmod_test.py  profiler_test.py  recommender_test.py  test_api.py
(+8 files in other folders)
